--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,13 @@
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
+# Dependencies
+/node_modules
 
-node_modules
-dist
-dist-ssr
-*.local
+# Build output
+/build
+/dist
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
-
+# Environment files
 .env
 
-# vscode
-.vscode
+# Other files to ignore
+.DS_Store
+*.log
